# chisato

./: .gitignore  LICENSE  README.md  chisato.opam  dune-project  subtitles.opam
.github/workflows/: workflow.yml
lib/: dune  subtitles.ml  subtitles.mli
lib/srt/: dune  srt.ml  srt.mli
lib/ssa/: dune  ssa.ml  ssa.mli
test/: dune  test_subtitles.ml
test/srt/: test_srt.ml
test/ssa/: dune  test_ssa.ml
