(lang dune 3.2)

(name subtitles)

(generate_opam_files true)

(source
 (github lucas-deangelis/subtitles))

(authors "Lucas DE ANGELIS <deangelis.lucas@outlook.com>")

(maintainers "Lucas DE ANGELIS <deangelis.lucas@outlook.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name subtitles)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (allow_empty)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
